po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-23 17:49+0000\n"
+"PO-Revision-Date: 2017-01-24 18:29+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -265,7 +265,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Return-Path must use a valid email address format."
-msgstr ""
+msgstr "Povratna putanja mora koristiti važeći format email adrese"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
@@ -273,7 +273,7 @@ msgstr "Server"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
-msgstr ""
+msgstr "Obrada odbijenih mailova"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email-to-Activity Processing"
@@ -286,7 +286,7 @@ msgstr "Koristi se za?"
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Please enter a valid domain for this mailbox account (the part after @)."
-msgstr ""
+msgstr "Unesite važeći domen za ovaj mail nalog (deo posle @)."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
@@ -321,7 +321,7 @@ msgstr "Naslov poruke"
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Message Subject"
-msgstr ""
+msgstr "Predmet poruke"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "View System Default Message Template"
@@ -501,7 +501,7 @@ msgstr "Oznaka za potpis"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Subject Label"
-msgstr ""
+msgstr "Oznaka predmeta"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "PHP class name"
@@ -874,7 +874,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Hashed Mailing URL's"
-msgstr ""
+msgstr "Hešovani mailing URL"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
@@ -1045,7 +1045,7 @@ msgstr "Odredite odgovarajuću vrednost"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "Predmet je obavezno polje."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -1353,7 +1353,7 @@ msgstr "Putanja za wkhtmltodf ne postoji ili nije važeća"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Settings - Upload Directories"
-msgstr ""
+msgstr "Podešavanja - direktorijumi za postavljanje"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Temporary Files"
@@ -1437,7 +1437,7 @@ msgstr "Isključi odlaznu e-poštu"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Redirect to Database"
-msgstr ""
+msgstr "Preusmeri ka bazi podataka"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Select Mailer"
@@ -1490,7 +1490,7 @@ msgstr "Email isključen"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "You have selected \"Redirect to Database\". A test email can not be sent."
-msgstr ""
+msgstr "Odabrali ste \"Preusmeri ka bazi podataka\". Test email ne može biti poslat."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
@@ -1562,7 +1562,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Image Upload URL"
-msgstr ""
+msgstr "URL za postavljanje slike"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Custom css URL"
@@ -2551,7 +2551,7 @@ msgid ""
 "How this mail account will be used. Only one box may be used for bounce "
 "processing. It will also be used as the envelope email when sending mass "
 "mailings."
-msgstr ""
+msgstr "Kako će se ovaj mail nalog koristiti. Samo jedan nalog se može koristiti za obradu odbijenih mailova. Takođe će se koristiti kao glavni nalog za slanje masovnih mailinga."
 
 #: templates/CRM/Admin/Form/Mapping.tpl
 msgid "WARNING: Are you sure you want to delete mapping '<b>%1</b>'?"
@@ -2583,7 +2583,7 @@ msgstr "Opisni naziv poruke - koristi se u selekciji šablona."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Subject for email message."
-msgstr ""
+msgstr "Predmet email poruke."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Tokens may be included (%1)."
@@ -3449,7 +3449,7 @@ msgstr "Čišćenje direktorijuma"
 
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid "Empties template cache and/or temporary upload file folders."
-msgstr ""
+msgstr "Prazni keš šablona ili/i foldere za privremeno postavljene fajlove"
 
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid "To empty template cache (civicrm/templates_c folder), add <em>%1</em>"
@@ -3458,7 +3458,7 @@ msgstr ""
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid ""
 "To remove temporary upload files (civicrm/upload folder), add <em>%1</em>"
-msgstr ""
+msgstr "Da uklonite privremeno postavljene fajlove (civicrm/upload folder), dodajte <em>%1</em>"
 
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
 msgid "To cleanup both, add <em>%1</em>"
@@ -3876,7 +3876,7 @@ msgstr ""
 msgid ""
 "File system path where temporary CiviCRM files - such as import data files -"
 " are uploaded."
-msgstr ""
+msgstr "Putanja ka sistemu gde se privremeni CiviCRM fajlovi - kao što su podaci za importovanje postavljeni."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
@@ -4203,7 +4203,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "URL of the location for uploaded image files."
-msgstr ""
+msgstr "URL ili lokacija postavljenih fajlova sa slikama."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "Extensions URL"
@@ -5161,7 +5161,7 @@ msgstr "Port"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Bounce Processing <strong>(Default)</strong>"
-msgstr ""
+msgstr "Obrada odbijenih mailova <strong>(Podrazumevani)</strong>"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Email-to-Activity"
@@ -6432,11 +6432,11 @@ msgstr ""
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Upload Document"
-msgstr ""
+msgstr "Postavi dokument"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
-msgstr ""
+msgstr "Postavite dokument"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6589,7 +6589,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Upload the document in .docx or .odt format."
-msgstr ""
+msgstr "Postavite dokument u .docx ili .odt formatu."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
