--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 20:51+0000\n"
+"PO-Revision-Date: 2017-01-24 10:03+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr "Pogledaj aktivnost"
 
 #: CRM/Case/BAO/Case.php
 msgid "no subject"
-msgstr ""
+msgstr "bez predmeta"
 
 #: CRM/Case/BAO/Case.php
 msgid "(multiple)"
@@ -79,7 +79,7 @@ msgid ""
 "You can not delete this case type -- it is assigned to %1 existing case "
 "record(s). If you do not want this case type to be used going forward, "
 "consider disabling it instead."
-msgstr ""
+msgstr "Nemoguće je obrisati ovaj tip predmeta -- dodeljen je %1 postojećem zapisu(zapisima) predmeta. Ukoliko ne želite da se ovaj tip predmeta koristi ubuduće, možete ga isključiti."
 
 #: CRM/Case/BAO/Query.php
 msgid "Case %1 My Cases"
