--- a/po/sr_RS@latin/queue.po
+++ b/po/sr_RS@latin/queue.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-01-24 09:40+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
-msgstr ""
+msgstr "Ime redosleda"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Submit Time"
@@ -38,4 +39,4 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "ID redosleda"
