--- a/po/sr_RS@latin/install.po
+++ b/po/sr_RS@latin/install.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-27 09:50+0000\n"
+"PO-Revision-Date: 2017-01-24 07:58+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -295,7 +295,7 @@ msgstr "Potreban vam je PHP verzija %1 ili kasnija, instaliran je %2. Molimo vas
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "PHP verzija %1 nije podržana. Potrebna vam je PHP ranija verzija od %1 .Molimo vas da ažurirate server ili zamolite vašeg web-hosta da to uradi za vas."
 
 #: install/index.php
 msgid "file '%1' not found"
