po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 21:43+0000\n"
+"PO-Revision-Date: 2017-01-24 11:25+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -102,7 +102,7 @@ msgstr "Mailing dostava"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce type(s)"
-msgstr ""
+msgstr "Tip(ovi) odbijanja"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable Opens"
@@ -145,7 +145,7 @@ msgstr "Status mailing posla"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce Types"
-msgstr ""
+msgstr "Tipovi odbijanja"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Opens"
@@ -456,7 +456,7 @@ msgstr "Uklonjeno u"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown bounce type: Could not parse bounce email"
-msgstr ""
+msgstr "Nepoznat tip odbijanja: Nemoguće je razložiti odbijeni email"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown"
@@ -484,7 +484,7 @@ msgstr ""
 #: CRM/Mailing/Event/DAO/Forward.php CRM/Mailing/Event/DAO/Opened.php
 #: CRM/Mailing/Event/DAO/Reply.php CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Time Stamp"
-msgstr ""
+msgstr "Vremenska oznaka"
 
 #: CRM/Mailing/Event/DAO/Confirm.php
 msgid "Mailing Confirmation ID"
@@ -496,7 +496,7 @@ msgstr "ID prijave za mailing"
 
 #: CRM/Mailing/Event/DAO/Confirm.php
 msgid "Confirm Timestamp"
-msgstr ""
+msgstr "Potvrdi vremensku oznaku"
 
 #: CRM/Mailing/Event/DAO/Queue.php
 msgid "Mailing Event Queue ID"
@@ -520,7 +520,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Timestamp"
-msgstr ""
+msgstr "Vremenska oznaka prijave za mailing listu"
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Unsubscribe ID"
@@ -532,11 +532,11 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Unsubscribe is for Organization?"
-msgstr ""
+msgstr "Odjava je za organizaciju?"
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Unsubscribe Timestamp"
-msgstr ""
+msgstr "Vremenska oznaka odjave sa mailing liste"
 
 #: CRM/Mailing/Form/Approve.php CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject Mailing"
@@ -870,11 +870,11 @@ msgstr ""
 #: CRM/Mailing/Form/Upload.php CRM/Mailing/Selector/Search.php
 #: templates/CRM/Mailing/Form/Task/Print.tpl
 msgid "Mailing Subject"
-msgstr ""
+msgstr "Predmet mailinga"
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Upload HTML Message"
-msgstr ""
+msgstr "Postavi HTML poruku"
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Please provide either a Text or HTML formatted message - or both."
@@ -996,7 +996,7 @@ msgstr ""
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"Subject\" lines"
-msgstr ""
+msgstr "Testiraj različite tekstove za \"predmet\""
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"From\" lines"
@@ -1032,7 +1032,7 @@ msgstr "Uspešno"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Bounced "
-msgstr ""
+msgstr "Odbijen"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Opened "
@@ -1118,7 +1118,7 @@ msgstr "Uspešne dostave"
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Bounces"
-msgstr ""
+msgstr "Odbijenih"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Replies"
@@ -1533,7 +1533,7 @@ msgstr "Snimi kao"
 
 #: ang/crmMailing/services.js
 msgid "Subject: %1"
-msgstr "Naslov: %1"
+msgstr "Predmet: %1"
 
 #: ang/crmMailing/services.js
 msgid "Could not identify any recipients. Perhaps the group is empty?"
@@ -1581,11 +1581,11 @@ msgstr "Odgovori (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (A)"
-msgstr ""
+msgstr "Predmet (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (B)"
-msgstr ""
+msgstr "Predmet (B)"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid ""
@@ -2523,19 +2523,19 @@ msgstr "Kampanja %1 %2"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Bounce Pattern ID"
-msgstr ""
+msgstr "ID obrasca odbijanja"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type ID"
-msgstr ""
+msgstr "ID tipa odbijanja"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Name"
-msgstr ""
+msgstr "Ime tipa odbijanja"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Description"
-msgstr ""
+msgstr "Opis tipa odbijanja"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Spool ID"
@@ -2551,7 +2551,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Bounce.php
 msgid "Bounce ID"
-msgstr ""
+msgstr "ID odbijanja"
 
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Event/DAO/Delivered.php
 #: CRM/Mailing/Event/DAO/Opened.php CRM/Mailing/Event/DAO/Reply.php
