po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-01-23 11:24+0000\n"
+"PO-Revision-Date: 2017-01-24 11:44+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -350,7 +350,7 @@ msgstr "administriraj CiviCRM"
 
 #: CRM/Core/Permission.php
 msgid "access uploaded files"
-msgstr ""
+msgstr "pristup postavljenim fajlovima"
 
 #: CRM/Core/Permission.php
 msgid "profile listings and forms"
@@ -1590,7 +1590,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Subject"
-msgstr ""
+msgstr "Predmet"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "A short description of the activity.."
@@ -1926,11 +1926,11 @@ msgstr "Naslov mailinga"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Subject Line"
-msgstr ""
+msgstr "Predmet"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Subject Line of the mailing"
-msgstr ""
+msgstr "Predmet ovog mailinga"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Body - Text"
@@ -2094,23 +2094,23 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailing Bounced"
-msgstr ""
+msgstr "CiviCRM mailing odbijen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Date of bounce"
-msgstr ""
+msgstr "datum odbijanja"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Date user e-mail bounced"
-msgstr ""
+msgstr "Datum kada je email korisnika odbijen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Mailing bounced ID"
-msgstr ""
+msgstr "ID odbijenog mailinga"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the bounce record"
-msgstr ""
+msgstr "Numerički ID zapisa o odbijanju"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Reason"
@@ -2118,7 +2118,7 @@ msgstr "Razlog"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Reason the e-mail bounced"
-msgstr ""
+msgstr "Razlog odbijanja emaila"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailing  Delivered"
@@ -2758,11 +2758,11 @@ msgstr "Ažuriran mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content has been uploaded"
-msgstr ""
+msgstr "Saržaj mailinga je postavljen"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content uploaded"
-msgstr ""
+msgstr "Saržaj mailinga postavljen"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been scheduled"
@@ -2836,11 +2836,11 @@ msgstr "Unesite email adresu primaoca. (Koristite zarez da odvojite više email 
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Message Subject"
-msgstr ""
+msgstr "Predmet poruke"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Enter subject for the email"
-msgstr ""
+msgstr "Unesite predmet poruke"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Select the group"
