po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-23 08:57+0000\n"
+"PO-Revision-Date: 2017-01-24 11:47+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1580,7 +1580,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Upload from my computer"
-msgstr ""
+msgstr "Postavi sa mog kompjutera"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Display image and thumbnail from these locations on the web:"
@@ -3755,7 +3755,7 @@ msgid ""
 "Enter content for the about message. You may include HTML formatting tags. "
 "You can also include images, as long as they are already uploaded to a "
 "server - reference them using complete URLs."
-msgstr ""
+msgstr "Unesite sadržaj za poruku O nama. Možete koristiti tagove HTML formata. Možete dodati i slike ukoliko su već postavljene na server - možete ih dodati koristeći kompletne URL-ove."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Widget.tpl
 msgid "Preview Widget and Get Code"
@@ -4259,7 +4259,7 @@ msgstr ""
 #: templates/CRM/Contribute/Import/Form/Preview.tpl
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Total rows (contribution records) in uploaded file."
-msgstr ""
+msgstr "Ukupno redova (zapisa o donacijama) u postavljenom fajlu."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid ""
