--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-20 08:53+0000\n"
+"PO-Revision-Date: 2017-01-24 09:06+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -553,7 +553,7 @@ msgstr "Klijent"
 #: CRM/Case/DAO/Case.php CRM/Case/Page/AJAX.php
 #: CRM/Report/Form/Case/Summary.php CRM/Report/Form/Extended.php
 msgid "Case Subject"
-msgstr ""
+msgstr "Subjekat predmeta"
 
 #: CRM/Case/DAO/Case.php CRM/Case/Form/Activity/OpenCase.php
 #: CRM/Case/Page/AJAX.php templates/CRM/Case/Form/Search/Common.tpl
@@ -2086,11 +2086,11 @@ msgstr "Naslov mailinga"
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Selector/Event.php
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Reason"
-msgstr ""
+msgstr "Razlog odbijanja"
 
 #: CRM/Mailing/Selector/Event.php CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Type"
-msgstr ""
+msgstr "Tip odbijanja"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 #: CRM/Report/Form/Register.php templates/CRM/Report/Page/Options.tpl
