po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 21:24+0000\n"
+"PO-Revision-Date: 2017-01-24 11:25+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -79,7 +79,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "GOTV (Track Voters)"
-msgstr ""
+msgstr "GOTV (Praćenje glasača)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -523,7 +523,7 @@ msgstr "Adresa organizacije i kontakt podaci"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "From Email Addresses"
-msgstr ""
+msgstr "OD email adrese"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -548,7 +548,7 @@ msgstr "Formati oznake"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Print Page (PDF) Formats"
-msgstr ""
+msgstr "Fomati štampe (PDF) strane"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -652,16 +652,16 @@ msgstr "URL resursa"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Cleanup Caches and Update Paths"
-msgstr ""
+msgstr "Čišćenje keša i ažuriranje putanja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CMS Database Integration"
-msgstr ""
+msgstr "Integracija u CMS bazu"
 
 msgctxt "menu"
 msgid "Safe File Extension Options"
-msgstr ""
+msgstr "Opcije bezbednih ekstenzija fajlova"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -771,7 +771,7 @@ msgstr "Nađi kontakte"
 
 msgctxt "menu"
 msgid "Process Uploaded Images"
-msgstr ""
+msgstr "Obrada postavljenih slika"
 
 msgctxt "menu"
 msgid "Get Image File"
@@ -859,7 +859,7 @@ msgstr "Smart grupe"
 
 msgctxt "menu"
 msgid "Sunlight"
-msgstr ""
+msgstr "Sunlight"
 
 msgctxt "menu"
 msgid "Notes"
@@ -994,7 +994,7 @@ msgstr "CiviCRM API"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Batch Data Entry"
-msgstr ""
+msgstr "Grupni unos podataka"
 
 msgctxt "menu"
 msgid "QUnit"
@@ -1518,7 +1518,7 @@ msgstr "Izveštaji kampanja"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "GOTV (Voter Tracking)"
-msgstr ""
+msgstr "GOTV (praćenje glasača)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1583,7 +1583,7 @@ msgstr "Komunikacije"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "FROM Email Addresses"
-msgstr ""
+msgstr "OD email adrese"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1633,7 +1633,7 @@ msgstr "Bezbedne ekstenzije fajlova"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Debugging and Error Handling"
-msgstr ""
+msgstr "Otklanjanje bagova i upravljanje greškama"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1813,7 +1813,7 @@ msgctxt "menu"
 msgid ""
 "Groups and totals contributions by criteria including contact, time period, "
 "contribution type, contributor location, etc."
-msgstr ""
+msgstr "Grupe i ukupne vrednosti donacija po kriterijumima koji uključuju kontakte, vremenski period, tip donacije, lokaciju donatora, itd."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1831,7 +1831,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Repeat Contributions"
-msgstr ""
+msgstr "Ponovi donacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1839,7 +1839,7 @@ msgid ""
 "Given two date ranges, shows contacts who contributed in both the date "
 "ranges with the amount contributed in each and the percentage increase / "
 "decrease."
-msgstr ""
+msgstr "Sa dva data raspona datuma prikazuje kontakte koji su donirali u oba, kao i iznos koji je doniran sa procentom uvećanja / smanjenja donacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2089,12 +2089,12 @@ msgstr "Statistike grant izveštaja"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Bounces"
-msgstr ""
+msgstr "Odbijenih mailova"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Bounce Report for mailings"
-msgstr ""
+msgstr "Izveštaj o odbijenim mailovima - mailings"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2114,17 +2114,17 @@ msgstr "Mail otvoren"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display contacts who opened emails from a mailing"
-msgstr ""
+msgstr "Prikazuje kontakte koji su otvorili mailing"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Clickthroughs"
-msgstr ""
+msgstr "Mail klikovi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display clicks from each mailing"
-msgstr ""
+msgstr "Prikazuje kontakte koji su kliknuli na link u mailingu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2136,7 +2136,7 @@ msgctxt "menu"
 msgid ""
 "Provides reporting on Intended and Successful Deliveries, Unsubscribes and "
 "Opt-outs, Replies and Forwards."
-msgstr ""
+msgstr "Prikazuje izveštaj o planiranoj i uspešnoj dostavi mailinga, odjava, isključenja, odgovora i prosleđivanja."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2170,7 +2170,7 @@ msgstr "CiviCRM resursi"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Grupno spajanje dupliranih kontakata"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
