--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 22:05+0000\n"
+"PO-Revision-Date: 2017-01-24 11:31+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1884,7 +1884,7 @@ msgstr ""
 #: templates/CRM/Member/Import/Form/Preview.tpl
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Total rows (membership records) in uploaded file."
-msgstr ""
+msgstr "Ukupno redova (zapisa o članstvu) u postavljenom fajlu."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid ""
