po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 22:51+0000\n"
+"PO-Revision-Date: 2017-01-24 12:01+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "Sredstvo plaćanja:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
-msgstr "Serija"
+msgstr "Grupa"
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -296,7 +296,7 @@ msgstr "Oznaka za potpis"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Subject"
-msgstr ""
+msgstr "Oznaka za predmet"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Site URL"
@@ -462,7 +462,7 @@ msgstr "Finansijski račun '%1' je sačuvan"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Financial Batch"
-msgstr "Finansijska serija"
+msgstr "Finansijska grupa"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Accounting Batch"
@@ -491,11 +491,11 @@ msgstr "Datum kreiranja ne može biti veći od trenutnog datuma"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "This name already exists in database. Batch names must be unique."
-msgstr "Ovo ime već postoji u bazi. Imena serija moraju biti jedinstvena."
+msgstr "Ovo ime već postoji u bazi. Imena grupa moraju biti jedinstvena."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "'%1' batch has been saved."
-msgstr "Serija '%1' je sačuvana."
+msgstr "Grupa '%1' je sačuvana."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "You dont have permission to %1 this batch"
@@ -822,11 +822,11 @@ msgstr "Akcija nije odabrana"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Please select one or more batches for this action."
-msgstr "Izaberite jednu ili više serija za ovu akciju."
+msgstr "Izaberite jednu ili više grupa za ovu akciju."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "No Batches Selected"
-msgstr "Nema odabranih serija"
+msgstr "Nema odabranih grupa"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Updating"
