po: update po/sr_RS@latin/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 22:25+0000\n"
+"PO-Revision-Date: 2017-01-24 09:18+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -67,7 +67,7 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance email Subject"
-msgstr ""
+msgstr "Predmet emaila sa izveštajem"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Email Report Instance To"
@@ -1183,15 +1183,15 @@ msgstr "\"%1\" izveštaj je uspešno kreiran. Trenutno gledate novi izveštaj."
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Count"
-msgstr ""
+msgstr "Broj odbijenih"
 
 #: CRM/Report/Form/Mailing/Bounce.php CRM/Report/Form/Mailing/Summary.php
 msgid "Bounce"
-msgstr ""
+msgstr "Odbijen"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Mail Bounce: %1"
-msgstr ""
+msgstr "Mail odbijen: %1"
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Click through URL"
@@ -1247,7 +1247,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Bounce Rate"
-msgstr ""
+msgstr "Stopa odbijenih mailova"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Confirmed Open Rate"
@@ -2290,7 +2290,7 @@ msgstr "Dodaj u Moje izveštaje?"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
-msgstr ""
+msgstr "Datum odbijanja"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
