--- a/po/sv_SE/countries.po
+++ b/po/sv_SE/countries.po
@@ -4,15 +4,16 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
+# Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Stefan Gagner <stefan@mei-ya.se>, 2013
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012,2015
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2012,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-24 23:32+0000\n"
+"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1050,20 +1051,20 @@ msgstr "Saint Martin (Franska delen)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Jungfruöarna, brittiska"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Elfenbenskusten"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Iran, Islamiska republiken"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Makedonien"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Palestina"
