--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -6,6 +6,7 @@
 # Anders Nilsson <anders@webmaestro.se>, 2015
 # Isak Bergdahl <jahve@rocketmail.com>, 2013-2014
 # Julipan <stian@julipan.org>, 2011
+# Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2016
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 15:06+0000\n"
-"Last-Translator: Thomas Nilefalk <thomas.nilefalk@responsive.se>\n"
+"PO-Revision-Date: 2017-01-24 23:35+0000\n"
+"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +36,7 @@ msgstr "Detta kontaktnamn finns redan i databasen. Kontaktnamn måste vara unika
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "Kontaktnamn skall inte använda reserverade nyckelord."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -151,7 +152,7 @@ msgstr "Är detta schemalagda job aktivt?"
 
 #: CRM/Admin/Form/Job.php
 msgid "Given API command is not defined."
-msgstr ""
+msgstr "API-kommandot är inte definierat."
 
 #: CRM/Admin/Form/Job.php
 msgid "Scheduled Job Deleted."
@@ -291,7 +292,7 @@ msgstr "Används för?"
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Please enter a valid domain for this mailbox account (the part after @)."
-msgstr ""
+msgstr "Ange en riktig domän för den här e-postkontot (delen efter @)"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
