--- a/po/sv_SE/extension.po
+++ b/po/sv_SE/extension.po
@@ -4,13 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2015-2016
+# Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-01-24 23:36+0000\n"
+"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -133,7 +134,7 @@ msgstr "Det gick inte att packa upp tillägget"
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
-msgstr ""
+msgstr "Kunde inte läsa data från %1 under installationsprocessen"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
