--- a/po/sv_SE/batch.po
+++ b/po/sv_SE/batch.po
@@ -5,14 +5,15 @@
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Jonathan S <jonathan.c.strom@gmail.com>, 2016
+# Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012,2014-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2012,2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-24 23:38+0000\n"
+"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -243,7 +244,7 @@ msgstr ""
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
-msgstr ""
+msgstr "TransaktionsID måste vara unikt i databasen"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
