--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -8,16 +8,17 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
 # Jonathan S <jonathan.c.strom@gmail.com>, 2016
+# Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # bumby <martin@gnutiken.se>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 15:36+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2017-01-24 23:44+0000\n"
+"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2163,7 +2164,7 @@ msgstr "Betalningsformer"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Stäng bokslutsperiod"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2172,7 +2173,7 @@ msgstr "Konfigurera CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "CiviCRM resurser"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2208,7 +2209,7 @@ msgstr "Tillägg"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Mina rapporter"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2228,7 +2229,7 @@ msgstr "Visar åtgärdsstatistik per typ/datum."
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Betalningsutfästelse detalj"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
