--- a/po/sv_SE/financial.po
+++ b/po/sv_SE/financial.po
@@ -4,15 +4,16 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2014
+# Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Mateusz Pozar <mateusz@kkvgbg.se>, 2015
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-24 23:45+0000\n"
+"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -355,7 +356,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "IP nummer"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Accounting Batch - %1"
