--- a/po/sr_RS@latin/batch.po
+++ b/po/sr_RS@latin/batch.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 10:00+0000\n"
+"PO-Revision-Date: 2017-01-25 19:28+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgstr "Očekivano ukupno"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No batches were selected."
-msgstr "Nema odabranih serija"
+msgstr "Nema odabranih grupa"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No export format selected."
@@ -95,7 +95,7 @@ msgstr "Ukupno u grupi"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Number of Items"
-msgstr ""
+msgstr "Grupa više stavki"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Instrument"
@@ -115,7 +115,7 @@ msgstr "Grupa obrisana"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Profile for bulk data entry is missing."
-msgstr ""
+msgstr "Nedostaje profil za grupni unos podataka."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Contributions"
@@ -168,11 +168,11 @@ msgstr "Obriši grupni unos podataka"
 
 #: templates/CRM/Batch/Form/Batch.tpl
 msgid "Edit Data Entry Batch"
-msgstr ""
+msgstr "Uredi grupni unos podataka"
 
 #: templates/CRM/Batch/Form/Batch.tpl templates/CRM/Batch/Form/Search.tpl
 msgid "New Data Entry Batch"
-msgstr ""
+msgstr "Novi grupni unos podataka"
 
 #: templates/CRM/Batch/Form/Batch.tpl
 msgid ""
@@ -202,7 +202,7 @@ msgstr ""
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
-msgstr ""
+msgstr "Grupni unosi podataka"
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Complete OR partial batch name."
